--- a/portfolio.html
+++ b/portfolio.html
@@ -2,58 +2,32 @@
 <html>
 <head>
 	<title>Tawny Cataldo</title>
-	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
 </head>
 <body>
-	<header>
-		<h1>Tawny Cataldo</h1>
-		<nav>
-			<ul>
-				<li><a href="index.html">About</a></li>
-				<li><a href="portfolio.html">Portfolio</a></li>
-				<li><a href="contact.html">Contact</a></li>
-			</ul>
-		</nav>
-	</header>
-	<div class="maincontent">
-		<h2>Portfolio</h2>
-		<hr class="hr1">
-		<div>
-			<div class="grid">
-				<img src="assets/images/abstract-q-c-275-200-1.jpg" alt="Project #1">
-				<h4>Project #1</h4>
-			</div>
-			<div class="grid">
-				<img src="assets/images/abstract-q-c-275-200-4.jpg" alt="Project #2">
-				<h4>Project #2</h4>
-			</div>
-			<div class="grid">
-				<img src="assets/images/abstract-q-c-275-200-3.jpg" alt="Project #3">
-				<h4>Project #3</h4>
-			</div>
-			<div class="grid">
-				<img src="assets/images/abstract-q-c-275-200-6.jpg" alt="Project #4">
-				<h4>Project #4</h4>
-			</div>
-				<div class="grid">
-				<img src="assets/images/abstract-q-c-275-200-9.jpg" alt="Project #5">
-			<h4>Project #5</h4>
-			</div>
-			<div class="push"></div>
-		</div>
-	</div>
-	<aside>
-		<h3>Connect with Me</h3>
-		<hr class="hr2">
-		<ul id="marginlist">
-			<li class="noborderlist"><a href="https://github.com/tawnycat"><img src="assets/images/if_github_386637.png" alt="Github Link"></a></li>
-			<li class="noborderlist"><a href="https://www.linkedin.com/in/tawny-cataldo/"><img src="assets/images/if_linkedin_386655.png" alt="LinkedIn Link"></a></li>
-			<li class="noborderlist"><a href="https://stackoverflow.com/users/8315899/t-cat?tab=profile"><img src="assets/images/if_overflow_386674.png" alt="Stack Overflow Link"></a></li>
-		</ul>
-	</aside>
-	<footer>
-		&copy; Copyright 2017 Tawny Cataldo
-	</footer>
+	<nav class="navbar navbar-expand-lg navbar-light bg-light">
+	  <a class="navbar-brand" href="#">Navbar</a>
+	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+	    <span class="navbar-toggler-icon"></span>
+	  </button>
+
+	  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+	    <ul class="navbar-nav mr-auto">
+	      <li class="nav-item active">
+	        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+	      </li>
+	      <li class="nav-item">
+	        <a class="nav-link" href="#">Link</a>
+	      </li>
+	      <li class="nav-item">
+	        <a class="nav-link disabled" href="#">Disabled</a>
+	      </li>
+	    </ul>
+	    <form class="form-inline my-2 my-lg-0">
+	      <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+	      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+	    </form>
+	  </div>
+	</nav>
 </body>
 </html>
