--- a/contact.html
+++ b/contact.html
@@ -33,12 +33,10 @@
 			<div class="col-md-8">
 				<div class="card">
 					<div class="card-header">
-						Blah
+						About Me
 					</div>
 					<div class="card-body">
-						<h4 class="card-title">Special title treatment</h4>
-						<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-						<a href="#" class="btn btn-primary">Go somewhere</a>
+						<img class="img-fluid" src="/assets/images/cats-q-c-200-150-7.jpg">
 					</div>
 				</div>
 			</div>
@@ -47,12 +45,12 @@
 					<div class="card-header">
 						Connect with Me
 					</div>
-					<div class="card-body">
-						<ul>
-							<li><img src="assets/images/if_github_386637.png"></li>
-							<li><img src="assets/images/if_linkedin_386655.png"></li>
-							<li><img src="assets/images/if_overflow_386674.png"></li>
-						</ul>
+					<div class="card-body d-flex justify-content-center">
+						
+						<a href="https://github.com/tawnycat"><img class="img-fluid" src="assets/images/if_github_386637.png"></a>
+						<a href="https://www.linkedin.com/in/tawny-cataldo/"><img class="img-fluid" src="assets/images/if_linkedin_386655.png"></a>
+						<a href="https://stackoverflow.com/users/8315899/t-cat?tab=profile"><img class="img-fluid" src="assets/images/if_overflow_386674.png"></a>
+						
 					</div>
 				</div>
 			</div>
