--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		</div>
 	</nav>
 
-	<div class="container">
+	<div class="container mt-4">
 		<div class="row">
 			<div class="col-md-8">
 				<div class="card">
@@ -36,7 +36,13 @@
 						About Me
 					</div>
 					<div class="card-body">
-						<img class="img-fluid" src="/assets/images/cats-q-c-200-150-7.jpg">
+						<img class="img-fluid float-left mr-3" src="assets/images/cats-q-c-200-150-7.jpg">
+						<p>
+							I am a web developer-to-be living in my ancestral homeland of Jersey City, NJ. After graduating from Rutgers University with a degree in Classics and taking a short break, I have decided to return to Rutgers for their Coding Bootcamp. Now, I am on track to know two kinds of languages (programming and dead).
+						</p>
+						<p>
+							When I'm not shaking my fist at computer screens, I enjoy reading comics, listening to Prince and watching TCM with my black fanged cat, Darby. 
+						</p>
 					</div>
 				</div>
 			</div>
@@ -47,9 +53,9 @@
 					</div>
 					<div class="card-body d-flex justify-content-center">
 						
-						<a href="https://github.com/tawnycat"><img class="img-fluid" src="assets/images/if_github_386637.png"></a>
-						<a href="https://www.linkedin.com/in/tawny-cataldo/"><img class="img-fluid" src="assets/images/if_linkedin_386655.png"></a>
-						<a href="https://stackoverflow.com/users/8315899/t-cat?tab=profile"><img class="img-fluid" src="assets/images/if_overflow_386674.png"></a>
+						<a href="https://github.com/tawnycat"><img class="img-fluid m-1" src="assets/images/if_github_386637.png" alt="Github Link"></a>
+						<a href="https://www.linkedin.com/in/tawny-cataldo/"><img class="img-fluid m-1" src="assets/images/if_linkedin_386655.png" alt="LinkedIn Link"></a>
+						<a href="https://stackoverflow.com/users/8315899/t-cat?tab=profile"><img class="img-fluid m-1" src="assets/images/if_overflow_386674.png" alt="Stack Overflow"></a>
 						
 					</div>
 				</div>
