--- a/portfolio.html
+++ b/portfolio.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Tawny Cataldo</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -28,33 +29,73 @@
 		</div>
 	</nav>
 
-	<div class="container">
+	<div class="container mt-4">
 		<div class="row">
 			<div class="col-md-8">
 				<div class="card">
-					<div class="card-header">
-						About Me
-					</div>
 					<div class="card-body">
-						<img class="img-fluid" src="/assets/images/cats-q-c-200-150-7.jpg">
+					<h1 class="card-title">Portfolio</h1>
+						<div class="d-flex flex-row justify-content-center">
+							<div class="card portfolio-card">
+								<img class="img-fluid float-left m-3 card-image" src="assets/images/abstract-q-c-275-200-1.jpg" alt="Project #1">
+								<div class="card-img-overlay">
+									<h4 class="card-text">Project #1</h4>
+								</div>
+							</div>
+							<div class="card portfolio-card justify-content-center">
+								<img class="img-fluid float-left m-3 card-image" src="assets/images/abstract-q-c-275-200-4.jpg" alt="Project #2">
+								<div class="card-img-overlay">
+									<h4 class="card-text">Project #2</h4>
+								</div>
+							</div>
+						</div>
+						<div class="d-flex flex-row justify-content-center">
+							<div class="card portfolio-card">
+								<img class="img-fluid float-left m-3 card-image" src="assets/images/abstract-q-c-275-200-3.jpg" alt="Project #3">
+								<div class="card-img-overlay">
+									<h4 class="card-text">Project #3</h4>
+								</div>
+							</div>
+							<div class="card portfolio-card justify-content-center">
+								<img class="img-fluid float-left m-3 card-image" src="assets/images/abstract-q-c-275-200-6.jpg" alt="Project #4">
+								<div class="card-img-overlay">
+									<h4 class="card-text">Project #4</h4>
+								</div>
+							</div>
+						</div>
+						<div class="d-flex flex-row justify-content-center">
+							<div class="card portfolio-card">
+								<img class="img-fluid float-left m-3 card-image" src="assets/images/abstract-q-c-275-200-9.jpg" alt="Project #5">
+								<div class="card-img-overlay">
+									<h4 class="card-text">Project #5</h4>
+								</div>
+							</div>
+							<div class="card portfolio-card">
+							<img class="img-fluid float-left m-3 card-image" src="" alt="">
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
 			<div class="col-md-4">
 				<div class="card">
-					<div class="card-header">
-						Connect with Me
-					</div>
-					<div class="card-body d-flex justify-content-center">
-					
+
+					<div class="card-body">
+					<h2 class="card-title clearfix">Connect with Me</h2>
+						<div class="d-flex justify-content-center">
 						<a href="https://github.com/tawnycat"><img class="img-fluid m-1" src="assets/images/if_github_386637.png" alt="Github Link"></a>
 						<a href="https://www.linkedin.com/in/tawny-cataldo/"><img class="img-fluid m-1" src="assets/images/if_linkedin_386655.png" alt="LinkedIn Link"></a>
 						<a href="https://stackoverflow.com/users/8315899/t-cat?tab=profile"><img class="img-fluid m-1" src="assets/images/if_overflow_386674.png" alt="Stack Overflow"></a>
-						
+						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
+	<footer class="footer">
+		<div class="container">
+			<span class="text-muted">Place sticky footer content here.</span>
+		</div>
+	</footer>
 </body>
 </html>
