--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Tawny Cataldo</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -34,8 +34,22 @@
 			<div class="col-md-8">
 				<div class="card">
 					<div class="card-body">
-					<h1 class="card-title">Contact</h1>
-						<img class="img-fluid" src="/assets/images/cats-q-c-200-150-7.jpg">
+						<h1 class="card-title">Contact</h1>
+						<form>
+													<div class="form-group">
+								<label>Name</label>
+								<input type="text" class="form-control" placeholder="John Smith">
+							</div>
+							<div class="form-group">
+								<label>Email address</label>
+								<input type="email" class="form-control" placeholder="example@gmail.com">
+							</div>
+							<div class="form-group">
+								<label>Example textarea</label>
+								<textarea class="form-control" rows="7"></textarea>
+							</div>
+							 <button type="submit" class="btn btn-primary">Submit</button>
+						</form>
 					</div>
 				</div>
 			</div>
@@ -43,21 +57,21 @@
 				<div class="card">
 
 					<div class="card-body">
-					<h2 class="card-title clearfix">Connect with Me</h2>
+						<h2 class="card-title clearfix">Connect with Me</h2>
 						<div class="d-flex justify-content-center">
-						<a href="https://github.com/tawnycat"><img class="img-fluid m-1" src="assets/images/if_github_386637.png" alt="Github Link"></a>
-						<a href="https://www.linkedin.com/in/tawny-cataldo/"><img class="img-fluid m-1" src="assets/images/if_linkedin_386655.png" alt="LinkedIn Link"></a>
-						<a href="https://stackoverflow.com/users/8315899/t-cat?tab=profile"><img class="img-fluid m-1" src="assets/images/if_overflow_386674.png" alt="Stack Overflow"></a>
+							<a href="https://github.com/tawnycat"><img class="img-fluid m-1" src="assets/images/if_github_386637.png" alt="Github Link"></a>
+							<a href="https://www.linkedin.com/in/tawny-cataldo/"><img class="img-fluid m-1" src="assets/images/if_linkedin_386655.png" alt="LinkedIn Link"></a>
+							<a href="https://stackoverflow.com/users/8315899/t-cat?tab=profile"><img class="img-fluid m-1" src="assets/images/if_overflow_386674.png" alt="Stack Overflow"></a>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
-	    <footer class="footer">
-      <div class="container">
-        <span class="text-muted">Place sticky footer content here.</span>
-      </div>
-    </footer>
+	<footer class="footer">
+		<div class="container">
+			<span class="text-muted">Place sticky footer content here.</span>
+		</div>
+	</footer>
 </body>
 </html>
