basic html finished

--- a/portfolio.html
+++ b/portfolio.html
@@ -34,42 +34,54 @@
 			<div class="col-md-8">
 				<div class="card">
 					<div class="card-body">
+
 						<h1 class="card-title">Portfolio</h1>
-						
-						<div class="card portfolio-card">
-							<img class="img-fluid float-left m-3 card-image" src="assets/images/abstract-q-c-275-200-1.jpg" alt="Project #1">
-							<div class="card-img-overlay">
-								<h4 class="card-text text-center">Project #1</h4>
-							</div>
-						</div>
-						<div class="card portfolio-card justify-content-center">
-							<img class="img-fluid float-left m-3 card-image" src="assets/images/abstract-q-c-275-200-4.jpg" alt="Project #2">
-							<div class="card-img-overlay">
-								<h4 class="card-text text-center">Project #2</h4>
-							</div>
-						</div>
 
-						<div class="card portfolio-card">
-							<img class="img-fluid float-left m-3 card-image" src="assets/images/abstract-q-c-275-200-3.jpg" alt="Project #3">
-							<div class="card-img-overlay">
-								<h4 class="card-text text-center">Project #3</h4>
+						<div class="row">
+							<div class="col-md-6">
+								<div class="card portfolio-card">
+									<img class="img-fluid float-left m-3 card-image" src="assets/images/abstract-q-c-275-200-1.jpg" alt="Project #1">
+									<div class="card-img-overlay">
+										<h4 class="card-text text-center">Project #1</h4>
+									</div>
+								</div>
+							</div>
+							<div class="col-md-6">
+								<div class="card portfolio-card">
+									<img class="img-fluid float-left m-3 card-image" src="assets/images/abstract-q-c-275-200-4.jpg" alt="Project #2">
+									<div class="card-img-overlay">
+										<h4 class="card-text text-center">Project #2</h4>
+									</div>
+								</div>
 							</div>
 						</div>
-						<div class="card portfolio-card justify-content-center">
-							<img class="img-fluid float-left m-3 card-image" src="assets/images/abstract-q-c-275-200-6.jpg" alt="Project #4">
-							<div class="card-img-overlay">
-								<h4 class="card-text text-center">Project #4</h4>
+						<div class="row">
+							<div class="col-md-6">
+								<div class="card portfolio-card">
+									<img class="img-fluid float-left m-3 card-image" src="assets/images/abstract-q-c-275-200-3.jpg" alt="Project #3">
+									<div class="card-img-overlay">
+										<h4 class="card-text text-center">Project #3</h4>
+									</div>
+								</div>
+							</div>
+							<div class="col-md-6">
+								<div class="card portfolio-card">
+									<img class="img-fluid float-left m-3 card-image" src="assets/images/abstract-q-c-275-200-6.jpg" alt="Project #4">
+									<div class="card-img-overlay">
+										<h4 class="card-text text-center">Project #4</h4>
+									</div>
+								</div>
 							</div>
 						</div>
-
+						<div class="row">
+						<div class="col-md-6">
 						<div class="card portfolio-card">
 							<img class="img-fluid float-left m-3 card-image" src="assets/images/abstract-q-c-275-200-9.jpg" alt="Project #5">
 							<div class="card-img-overlay">
 								<h4 class="card-text text-center">Project #5</h4>
 							</div>
 						</div>
-						<div class="card portfolio-card">
-							<img class="img-fluid float-left m-3 card-image" src="" alt="">
+						</div>
 						</div>
 						
 					</div>
