style coming together

--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
 <body>
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
 		<div class="container">
-			<a class="navbar-brand">Tawny Cataldo</a>
+			<a class="navbar-brand" id="header-color">Tawny Cataldo</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
@@ -74,14 +74,14 @@
 							</div>
 						</div>
 						<div class="row">
-						<div class="col-md-6">
-						<div class="card portfolio-card">
-							<img class="img-fluid float-left m-3 card-image" src="assets/images/abstract-q-c-275-200-9.jpg" alt="Project #5">
-							<div class="card-img-overlay">
-								<h4 class="card-text text-center">Project #5</h4>
+							<div class="col-md-6">
+								<div class="card portfolio-card">
+									<img class="img-fluid float-left m-3 card-image" src="assets/images/abstract-q-c-275-200-9.jpg" alt="Project #5">
+									<div class="card-img-overlay">
+										<h4 class="card-text text-center">Project #5</h4>
+									</div>
+								</div>
 							</div>
-						</div>
-						</div>
 						</div>
 						
 					</div>
@@ -103,7 +103,7 @@
 	</div>
 	<footer class="footer">
 		<div class="container">
-			<span class="text-muted">Place sticky footer content here.</span>
+			<span class>&copy; 2017 Tawny Cataldo</span>
 		</div>
 	</footer>
 </body>
