--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
 		<div class="container">
-			<a class="navbar-brand">Tawny Cataldo</a>
+			<a class="navbar-brand" id="header-color">Tawny Cataldo</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
@@ -63,7 +63,7 @@
 	</div>
     <footer class="footer">
       <div class="container">
-        <span class="text-muted">Place sticky footer content here.</span>
+        <span>&copy; 2017 Tawny Cataldo</span>
       </div>
     </footer>
 </body>
