--- a/contact.html
+++ b/contact.html
@@ -4,9 +4,10 @@
 	<title>Tawny Cataldo</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>
 <body>
-	<nav class="navbar navbar-expand-lg navbar-light bg-light">
+	<nav class="navbar navbar-expand-lg navbar-light">
 		<div class="container">
 			<a class="navbar-brand" id="header-color">Tawny Cataldo</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -35,6 +36,7 @@
 				<div class="card">
 					<div class="card-body">
 						<h1 class="card-title">Contact</h1>
+						<hr class="hr1">
 						<form>
 													<div class="form-group">
 								<label>Name</label>
@@ -45,10 +47,10 @@
 								<input type="email" class="form-control" placeholder="example@gmail.com">
 							</div>
 							<div class="form-group">
-								<label>Example textarea</label>
+								<label>Message</label>
 								<textarea class="form-control" rows="7"></textarea>
 							</div>
-							 <button type="submit" class="btn btn-primary">Submit</button>
+							 <button type="submit">Submit</button>
 						</form>
 					</div>
 				</div>
@@ -58,6 +60,7 @@
 
 					<div class="card-body">
 						<h2 class="card-title clearfix">Connect with Me</h2>
+						<hr>
 						<div class="d-flex justify-content-center">
 							<a href="https://github.com/tawnycat"><img class="img-fluid m-1" src="assets/images/if_github_386637.png" alt="Github Link"></a>
 							<a href="https://www.linkedin.com/in/tawny-cataldo/"><img class="img-fluid m-1" src="assets/images/if_linkedin_386655.png" alt="LinkedIn Link"></a>
@@ -70,8 +73,11 @@
 	</div>
 	<footer class="footer">
 		<div class="container">
-			<span">&copy; 2017 Tawny Cataldo</span>
+			<span">&copy; Copyright 2017 Tawny Cataldo</span>
 		</div>
 	</footer>
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
 </body>
 </html>
